k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aam-mysql-service
  namespace: default
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: aam-mysql-deployment
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: aam-wp-service
  namespace: default
spec:
  selector:
    app: aam-wp-deployment
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
